--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
   <link rel="stylesheet" href="CSS/styles.css?v=1.0">
   <link rel="stylesheet" type="text/css" href="acumin-pro-cufonfonts-webfont/style.css" />
+  <script src="https://kit.fontawesome.com/ce3cddd37f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!--script src="js/scripts.js"></script-->
   <nav>
   		<div class="menu">
-  			<div class="title"><a href="#">KATIE CANNING</a>
+  			<div class="title"><a href="index.html">KATIE CANNING</a>
   					<div class="subtitle">WRITER AND NARRATIVE DESIGNER.</div>
   			</div>	
   			<ul>
@@ -26,9 +27,19 @@
   				<li><a href="#"><span>ABOUT ME</span></a></li>
   			</ul>
   		</div>
-  		<div class="center">
-  			<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
-  		</div>
-  	</nav>
+  </nav>
+  <div class="center">
+  	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
+  </div>
+  <div class="portfolio-gallery">
+  	<div class="img-overlay"><img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"></div>
+  </div>
+  <footer>
+  	<hr>
+  	<div class="footer-nav">
+  			<a href ="mailto: katieleecanning@gmail.com" class="footer-elem">katieleecanning@gmail.com</a>
+  			<a href ="https://www.linkedin.com/in/katie-canning/" class="footer-elem"><i class="fab fa-linkedin fa-2x"></i></a>
+  	</div>
+  </footer>
 </body>
 </html>
