Started working on portfolio images.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
   	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
   </div>
   <div class="portfolio-gallery">
-  	<div class="img-overlay"><img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"></div>
+  	<div class="img-overlay"><img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"/></div>
+  	<div class="img-caption">TE AWAROA NATIONAL PARK</div>
+  	<!--span class="imgWrap">
+    	<img src="http://www.floral-directory.com/flower.gif" class="image" />
+	</span-->
   </div>
   <footer>
   	<hr>
