Responsive nav bar added.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
   <nav>
   		<div class="menu">
   			<div class="title"><a href="index.html">KATIE CANNING</a>
-  					<div class="subtitle">WRITER AND NARRATIVE DESIGNER.</div>
-  			</div>	
+  				<div class="subtitle">WRITER AND NARRATIVE DESIGNER.</div>
+  			</div>
+  			<input type="checkbox" id="check">
+  			<label for="check" class="checkbtn">
+  				<i class="fa fa-bars" aria-hidden="true" onclick></i>
+  			</label>
   			<ul>
   				<li><a href="#"><span>PROJECTS</span></a></li>
   				<li><a href="#"><span>WRITING SAMPLES</span></a></li>
@@ -29,14 +33,21 @@
   		</div>
   </nav>
   <div class="center">
-  	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
-  </div>
+  	<!--<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
+  </div>-->
   <div class="portfolio-gallery">
-  	<div class="img-overlay"><img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"/></div>
-  	<div class="img-caption">TE AWAROA NATIONAL PARK</div>
-  	<!--span class="imgWrap">
-    	<img src="http://www.floral-directory.com/flower.gif" class="image" />
-	</span-->
+  	<div class="img-overlay">
+  		<div class="img-caption">TE AWAROA NATIONAL PARK</div>
+  		<img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"/>
+  	</div>
+  	<div class="img-overlay">
+  		<div class="img-caption">SILVER RIDGE PEAKS</div>
+  		<img src="Images/silverridgepeaks.jpg" alt="Silver Ridge Peaks Marketing Art" class="portfolio-img"/>
+  	</div>
+  	<div class="img-overlay">
+  		<div class="img-caption">ALLTARACH</div>
+  		<img src="Images/silverridgepeaks.jpg" alt="Alltarach Key Art" class="portfolio-img"/>
+  	</div>
   </div>
   <footer>
   	<hr>
