--- a/index.html
+++ b/index.html
@@ -12,29 +12,20 @@
   <link rel="stylesheet" href="CSS/styles.css?v=1.0">
   <link rel="stylesheet" type="text/css" href="acumin-pro-cufonfonts-webfont/style.css" />
   <script src="https://kit.fontawesome.com/ce3cddd37f.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script>
+  	$(function(){
+  		$('#nav').load('reuseheader.html');
+  		$('#footer').load('reusefooter.html');
+  	});
+  </script>
 </head>
 
 <body>
-  <!--script src="js/scripts.js"></script-->
-  <nav>
-  		<div class="menu">
-  			<div class="title"><a href="index.html">KATIE CANNING</a>
-  				<div class="subtitle">WRITER AND NARRATIVE DESIGNER.</div>
-  			</div>
-  			<input type="checkbox" id="check">
-  			<label for="check" class="checkbtn">
-  				<i class="fa fa-bars" aria-hidden="true" onclick></i>
-  			</label>
-  			<ul>
-  				<li><a href="#"><span>PROJECTS</span></a></li>
-  				<li><a href="#"><span>WRITING SAMPLES</span></a></li>
-  				<li><a href="#"><span>ABOUT ME</span></a></li>
-  			</ul>
-  		</div>
-  </nav>
+  <div id="nav"></div>
   <div class="center">
-  	<!--<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
-  </div>-->
+  	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
+  </div>
   <div class="portfolio-gallery">
   	<div class="img-overlay">
   		<div class="img-caption">TE AWAROA NATIONAL PARK</div>
@@ -49,12 +40,6 @@
   		<img src="Images/silverridgepeaks.jpg" alt="Alltarach Key Art" class="portfolio-img"/>
   	</div>
   </div>
-  <footer>
-  	<hr>
-  	<div class="footer-nav">
-  			<a href ="mailto: katieleecanning@gmail.com" class="footer-elem">katieleecanning@gmail.com</a>
-  			<a href ="https://www.linkedin.com/in/katie-canning/" class="footer-elem"><i class="fab fa-linkedin fa-2x"></i></a>
-  	</div>
-  </footer>
+  <div id="footer"></div>
 </body>
 </html>
