Added Alltarach key art.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
   	});
   </script>
 </head>
-
 <body>
   <div id="nav"></div>
   <div class="center">
-  	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, or view writing samples <a href="" class="standard-link">here.</a></div>
+  	<div class="intro-text">Hi! I’m Katie, a writer and narrative designer based in Stockholm, Sweden. I create worlds, characters, and stories from words. <br/><br/>You can see some of the projects I’ve worked on below, view writing samples <a href="" class="standard-link">here</a>, or pop me a line at <a href ="mailto: katieleecanning@gmail.com" class="standard-link">katieleecanning@gmail.com.</a></div>
   </div>
   <div class="portfolio-gallery">
   	<div class="img-overlay">
@@ -32,12 +31,12 @@
   		<img src="Images/teawaroa.png" alt="Te Awaroa National Park Marketing Art" class="portfolio-img"/>
   	</div>
   	<div class="img-overlay">
-  		<div class="img-caption">SILVER RIDGE PEAKS</div>
-  		<img src="Images/silverridgepeaks.jpg" alt="Silver Ridge Peaks Marketing Art" class="portfolio-img"/>
+  		<!--<div class="img-caption">ALLTARACH</div>-->
+  		<img src="Images/alltarach.png" alt="Alltarach Key Art" class="portfolio-img"/>
   	</div>
   	<div class="img-overlay">
-  		<div class="img-caption">ALLTARACH</div>
-  		<img src="Images/silverridgepeaks.jpg" alt="Alltarach Key Art" class="portfolio-img"/>
+  		<div class="img-caption">SILVER RIDGE PEAKS</div>
+  		<img src="Images/silverridgepeaks.jpg" alt="Silver Ridge Peaks Marketing Art" class="portfolio-img"/>
   	</div>
   </div>
   <div id="footer"></div>
